--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <span id="typing-text" class="typing-text"></span>
                             <span class="cursor"></span>
                         </div>
-                        <p class="hero-description">Data Science & Web Automation</p>
+                        <p class="hero-description">Data Analyst & Web Automation Specialist</p>
                         <div class="hero-buttons">
                             <a href="#contact" class="btn primary-btn">Contact Me</a>
                             <a href="#projects" class="btn secondary-btn">View Projects</a>
@@ -115,24 +115,28 @@
                                 <img src="images/profile.jpg" alt="Muhammad Noman" class="profile-circle-img">
                             </div>
                         </div>
-                        <a href="#" class="glass-card-btn">
+                        <a href="https://raw.githubusercontent.com/muhammadnoman908/my-CV/main/MUHAMMAD%20NOMAN.pdf" class="glass-card-btn">
                             <i class="fas fa-download me-2"></i>Download CV
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
                     <div class="about-content">
-                        <h3>Web Developer & Data Analyst</h3>
-                        <p>
-                            I am a passionate developer specializing in Web Automation, Data Analysis, and MERN Stack Development. 
-                            With expertise in Python, JavaScript, and modern web technologies, I create efficient solutions 
-                            that combine data-driven insights with exceptional user experiences.
-                        </p>
-                        <p>
-                            My approach focuses on delivering high-quality, scalable applications while maintaining 
-                            clean code practices and optimal performance. I believe in continuous learning and 
-                            staying updated with the latest industry trends.
-                        </p>
+                <h3 style="text-align: center; margin-bottom: 12px;">
+                    Web Automation Specialist & Data Analyst
+                </h3>
+
+                <p style="text-align: justify; margin: 0 0 8px 0; line-height: 1.5;">
+                    I am a results-driven developer with expertise in Web Automation and Data Analysis, skilled in creating intelligent solutions 
+                    that streamline processes and extract valuable insights. My technical background includes hands-on experience with 
+                    Python, JavaScript, and modern web technologies, enabling me to build scalable and efficient applications.
+                </p>
+
+                <p style="text-align: justify; margin: 0; line-height: 1.5;">
+                    Alongside automation and analytics, I have strong experience in managing both SQL and NoSQL databases, 
+                    including MySQL and MongoDB, ensuring secure, optimized, and well-structured data handling for diverse projects. 
+                    I prioritize clean code practices, performance optimization, and long-term scalability in every solution I deliver.
+                </p>
                         <div class="about-info">
                             <div class="info-item name">
                                 <span>Name</span>
@@ -144,7 +148,7 @@
                             </div>
                             <div class="info-item expertise">
                                 <span>Expertise</span>
-                                <p>Web Automation, Data Analysis, MERN Stack</p>
+                                <p>Web Automation, Data Analysis</p>
                             </div>
                             <div class="info-item experience">
                                 <span>Experience</span>
@@ -165,7 +169,7 @@
                 <div class="underline"></div>
             </div>
             <div class="row">
-                <div class="col-md-6" data-aos="fade-right">
+                <div class="col-md-6 col-lg-4" data-aos="fade-right">
                     <div class="skill-category">
                         <h3>Programming Languages</h3>
                         <div class="skill-item">
@@ -189,10 +193,10 @@
                         <div class="skill-item">
                             <div class="skill-info">
                                 <p>R</p>
-                                <p class="percent">70%</p>
+                                <p class="percent">60%</p>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" data-progress="70"></div>
+                                <div class="skill-progress" data-progress="60"></div>
                             </div>
                         </div>
                         <div class="skill-item">
@@ -206,7 +210,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6" data-aos="fade-left">
+                <div class="col-md-6 col-lg-4" data-aos="fade-up">
                     <div class="skill-category">
                         <h3>Web Technologies</h3>
                         <div class="skill-item">
@@ -243,6 +247,63 @@
                             </div>
                             <div class="skill-bar">
                                 <div class="skill-progress" data-progress="70"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4" data-aos="fade-left">
+                    <div class="skill-category">
+                        <h3>Data Analysis Tools</h3>
+                        <div class="skill-item">
+                            <div class="skill-info">
+                                <p>Power BI</p>
+                                <p class="percent">75%</p>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="skill-progress" data-progress="75"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-info">
+                                <p>MS Excel</p>
+                                <p class="percent">85%</p>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="skill-progress" data-progress="85"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-info">
+                                <p>Google Sheets</p>
+                                <p class="percent">80%</p>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="skill-progress" data-progress="80"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-md-6 col-lg-6" data-aos="fade-right">
+                    <div class="skill-category">
+                        <h3>DevOps Tools</h3>
+                        <div class="skill-item">
+                            <div class="skill-info">
+                                <p>Git/GitHub</p>
+                                <p class="percent">85%</p>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="skill-progress" data-progress="85"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-info">
+                                <p>Docker</p>
+                                <p class="percent">65%</p>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="skill-progress" data-progress="65"></div>
                             </div>
                         </div>
                     </div>
@@ -335,6 +396,23 @@
                                 <span>Cheerio</span>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- View All Projects Button -->
+            <div class="row mt-5">
+                <div class="col-12 text-center" data-aos="fade-up" data-aos-delay="300">
+                    <div class="view-all-projects-container">
+                        <a href="https://github.com/NomanSiddiqui0000?tab=repositories" target="_blank" class="view-all-projects-btn">
+                            <div class="btn-content">
+                                <i class="fab fa-github btn-icon"></i>
+                                <span class="btn-text">View All Projects</span>
+                                <i class="fas fa-external-link-alt btn-external"></i>
+                            </div>
+                            <div class="btn-glow"></div>
+                        </a>
+                        <p class="view-all-subtitle">Explore more of my work on GitHub</p>
                     </div>
                 </div>
             </div>
