reduce image Size

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-md-6 order-md-2 order-1">
                     <div class="profile-container">
                         <div class="profile-image-wrapper">
-                            <img src="images/profile.jpg" alt="Muhammad Noman" class="profile-image" onerror="this.onerror=null; this.src='https://via.placeholder.com/600x800?text=Muhammad+Noman'">
+                            <img src="images/profile.png" alt="Muhammad Noman" class="profile-image" onerror="this.onerror=null; this.src='https://via.placeholder.com/600x800?text=Muhammad+Noman'">
                         </div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                         <div class="profile-thread">
                             <div class="thread-line"></div>
                             <div class="profile-circle">
-                                <img src="images/profile.jpg" alt="Muhammad Noman" class="profile-circle-img">
+                                <img src="images/profile.png" alt="Muhammad Noman" class="profile-circle-img">
                             </div>
                         </div>
                         <a href="https://raw.githubusercontent.com/muhammadnoman908/my-CV/main/MUHAMMAD%20NOMAN.pdf" class="glass-card-btn">
